# ModernCppStarterExampleBoostCmake

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: install.yml  install_download_all.yml  standalone.yml  windows.yml
cmake/: getCPM.cmake
documentation/: CMakeLists.txt
include/: example_my_example.hpp
patches/boost/: boost_cmake_give_all_boost_deps_please.patch
patches/packageProject.cmake/: install_lib_to_lib64_not_specific_folder.patch
source/: example_my_example.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt  checkinstall_version.sh  checkinstall_version_download_all.sh
test/source/: greeter.cpp
